@@ -4,8 +4,21 @@ import time, gtk
 gglobals.gourmetdir = '/tmp/'
 gglobals.dbargs['file'] = '/tmp/recipes.db'
 
+VERBOSE = True
+
 import GourmetRecipeManager
 from reccard import add_with_undo
+
+def assert_with_message (callable,
+                         description):
+    try:
+        assert(callable())
+    except AssertionError:
+        print 'FAILED:',description
+        raise
+    else:
+        if VERBOSE:
+            print 'SUCCEEDED:',description
 
 def add_save_and_check (rc, lines_groups_and_dc):
     added = []
@@ -47,12 +60,12 @@ def check_ings (check_dics,ings):
                 raise
         n -= 1
 
-def test_ing_editing (rc, verbose=True):
+def test_ing_editing (rc):
     """Handed a recipe card, test ingredient editing"""
     # Add some ingredients in a group...
     rc.show_edit(tab=rc.NOTEBOOK_ING_PAGE)        
     g = rc.ingtree_ui.ingController.add_group('Foo bar')
-    if verbose: print "Testing ingredient editing - add 4 ingredients to a group."
+    if VERBOSE: print "Testing ingredient editing - add 4 ingredients to a group."
     add_save_and_check(
         rc,
         [['1 c. sugar',g,
@@ -68,10 +81,10 @@ def test_ing_editing (rc, verbose=True):
          {'amount':1,'unit':'tbs.','item':'extraordinarily silly','inggroup':'Foo bar'}
          ],]
         )
-    if verbose: print "Ingredient editing successful"
+    if VERBOSE: print "Ingredient editing successful"
     return g
     
-def test_ing_undo (rc, verbose=True):
+def test_ing_undo (rc):
     rc.show_edit(tab=rc.NOTEBOOK_ING_PAGE)        
     ings_groups_and_dcs = [
         # Just 1 ing -- more will require more undos
@@ -98,11 +111,11 @@ def test_ing_undo (rc, verbose=True):
             ii
             )
     except AssertionError:
-        if verbose: print 'Deletion worked!' # we expect an assertion error
+        if VERBOSE: print 'Deletion worked!' # we expect an assertion error
     else:
-        if verbose: print [i[2] for i in ings_groups_and_dcs]
-        if verbose: print 'corresponds to'
-        if verbose: print [(i.amount,i.unit,i.item) for i in ii]
+        if VERBOSE: print [i[2] for i in ings_groups_and_dcs]
+        if VERBOSE: print 'corresponds to'
+        if VERBOSE: print [(i.amount,i.unit,i.item) for i in ii]
         raise "Ings Not Deleted!"
     # Undo after save...
     rc.undo.emit('activate') # Undo deletion
@@ -115,9 +128,9 @@ def test_ing_undo (rc, verbose=True):
         [i[2] for i in ings_groups_and_dcs],
         rc.rd.get_ings(rc.current_rec)
         )
-    if verbose: print 'Undeletion worked!'
+    if VERBOSE: print 'Undeletion worked!'
 
-def test_ing_group_editing (rc, verbose=True):
+def test_ing_group_editing (rc):
     rc.show_edit(tab=rc.NOTEBOOK_ING_PAGE)
     # We rely on the first item being a group
     itr = rec_card.ingtree_ui.ingController.imodel.get_iter(0,)
@@ -125,98 +138,97 @@ def test_ing_group_editing (rc, verbose=True):
     rc.saveEditsCB()
     ings = rc.rd.get_ings(rc.current_rec)
     assert(ings[0].inggroup == 'New Foo') # Make sure our new group got saved
-    if verbose: print 'Group successfully changed to "New Foo"'
+    if VERBOSE: print 'Group successfully changed to "New Foo"'
     rc.undo.emit('activate') # Undo
     assert(rc.save.get_sensitive()) # Make sure "Save" is sensitive after undo
     rc.saveEditsCB() # Save new changes
     ings = rc.rd.get_ings(rc.current_rec)
     assert(ings[0].inggroup != 'New Foo') # Make sure our new group got un-done
-    if verbose: print 'Undo of group change worked.'
+    if VERBOSE: print 'Undo of group change worked.'
     
-def test_undo_save_sensitivity (rc, verbose=True):
+def test_undo_save_sensitivity (rc):
     rc.show_edit(tab=rc.NOTEBOOK_ATTR_PAGE)        
     rc.saveEditsCB()
-    try:
-        assert(not rc.save.get_sensitive())
-    except:
-        print 'FAILURE: SAVE Button not properly desensitized after save'; raise
-    else:
-        if verbose: print 'SAVE Button properly desensitized'
-    for widget,value in [('rating',8),
+    assert_with_message(
+        lambda : not rc.save.get_sensitive(),
+        'SAVE Button not properly desensitized after save'
+        )
+    for widget,value in [
                          ('preptime',30*60),
                          ('cooktime',60*60),
                          ('title','Foo bar'),
                          ('cuisine','Mexican'),
-                         ('category','Entree')                         
+                         ('category','Entree'),
+                         ('rating',8),
                          ]:
-        if verbose: print 'TESTING ',widget
+        if VERBOSE: print 'TESTING ',widget
         if type(value)==int:
             orig_value = rc.rw[widget].get_value()
             rc.rw[widget].set_value(value)
             get_method = rc.rw[widget].get_value
-            if verbose: print 'Set with set_value(',value,')'
+            if VERBOSE: print 'Set with set_value(',value,')'
         elif widget in rc.reccom:
             orig_value = rc.rw[widget].entry.get_text()
             rc.rw[widget].entry.set_text(value)
             get_method = rc.rw[widget].entry.get_text
-            if verbose: print 'Set with entry.set_text(',value,')'            
+            if VERBOSE: print 'Set with entry.set_text(',value,')'            
         else:
             orig_value = rc.rw[widget].get_text()
             rc.rw[widget].set_text(value)
             get_method = rc.rw[widget].get_text
-            if verbose: print 'Set with set_text(',value,')'                        
-        try: assert(get_method()==value)
-        except: print '''Value not set properly for %s
-        is %s, should be %s'''%(
+            if VERBOSE: print 'Set with set_text(',value,')'                        
+        assert_with_message(
+            lambda : get_method()==value,
+            '''Value set properly for %s to %s (should be %s)'''%(
             widget,get_method(),value
-            ); raise
-        try:
-            assert(rc.save.get_sensitive())
-        except:
-            print 'Save not sensitized after setting %s'%widget; raise
-        else:
-            if verbose: print 'Save sensitized properly after setting %s'%widget
+            )
+            )
+        assert_with_message(rc.save.get_sensitive,
+                            'Save sensitized after setting %s'%widget)
+        assert_with_message(rc.undo.get_sensitive,
+                            'Undo sensitized after setting %s'%widget)
+        print '-- Hitting UNDO'
         rc.undo.emit('activate')
+        while gtk.events_pending():
+            gtk.main_iteration()
         if orig_value and type(value)!=int: rc.undo.emit('activate') # Blank text, then fill it
-        try:
-            assert(get_method()==orig_value)
-        except:
-            print '''Value not unset properly on for %s
-            Should have been set to %s'''%(widget,orig_value); raise
-        else:
-            if verbose: print 'Value set properly for %s after Undo'%widget
-        try:
-            assert(not rc.save.get_sensitive())
-        except:
-            print 'Save not desensitized after unsetting %s'%widget; raise
-        else:
-            if verbose: print 'Save desensitized correctly after unsetting %s'%widget
+        assert_with_message(
+            lambda : get_method()==orig_value,
+            'Value of %s set to %s after Undo'%(widget,orig_value)
+            )
+        assert_with_message(
+            lambda: not rc.save.get_sensitive(),
+            'Save desensitized correctly after unsetting %s'%widget
+            )
+        if VERBOSE: print "-- Hitting 'REDO'"
         rc.redo.emit('activate')
-        if orig_value and type(value)!=int: rc.redo.emit('activate') # Blank text, then fill it        
-        try: assert(get_method()==value)
-        except: print '''Value not set properly for REDO %s
-        is %s, should be %s'''%(
-            widget,get_method(),value
-            ); raise
-        try:
-            assert(rc.save.get_sensitive())
-        except:
-            print 'Save not sensitized after setting %s via REDO'%widget; raise
+        if orig_value and type(value)!=int:
+            if VERBOSE: print "(Hitting redo a second time for text...)"
+            rc.redo.emit('activate') # Blank text, then fill it        
+        assert_with_message(
+            lambda : get_method()==value,
+            'Value of %s set to %s (should be %s)'%(widget,
+                                                          get_method(),
+                                                          value)
+            )
+        assert_with_message(rc.save.get_sensitive,
+                            'Save sensitized after setting %s via REDO'%widget)
+        print '-- Hitting UNDO again'
         rc.undo.emit('activate')
-        if orig_value and type(value)!=int: rc.undo.emit('activate') # Blank text, then fill it
+        if orig_value and type(value)!=int:
+            if VERBOSE: print '(Hitting UNDO a second time for text)'
+            rc.undo.emit('activate') # Blank text, then fill it
+        assert_with_message(
+            lambda : get_method()==orig_value,
+            'Value unset properly on for %s UNDO->REDO->UNDO'%widget
+            )
         try:
-            assert(get_method()==orig_value)
+            assert_with_message(lambda : not rc.save.get_sensitive(),
+                                'Save desensitized after undo->redo->undo of %s'%widget)
         except:
-            print '''Value not unset properly on for %s UNDO->REDO->UNDO
-            Should have been set to %s'''%(widget,orig_value); raise
-        else:
-            if verbose: print 'Value set properly for %s after Undo->Redo->Undo'%widget
-        try:
-            assert(not rc.save.get_sensitive())
-        except:
-            print 'Save not desensitized after undo->redo->undo %s'%widget; raise
-        else:
-            if verbose: print 'Save desensitized correctly after undo->redo->undo %s'%widget
+            print 'rc.widgets_changed_since_save',rc.widgets_changed_since_save
+            raise
+        if VERBOSE: print 'DONE TESTING %s'%widget
 
 rg = GourmetRecipeManager.RecGui()
 rg.newRecCard()
@@ -224,13 +236,13 @@ while gtk.events_pending(): gtk.main_iteration()
 rec_id,rec_card = rg.rc.items()[0]
 
 try:
-    test_ing_editing(rec_card,verbose=False)
+    test_ing_editing(rec_card)
     print 'Ing Editing works!'
-    test_ing_undo(rec_card,verbose=False)
+    test_ing_undo(rec_card)
     print 'Ing Undo works!'
-    test_undo_save_sensitivity(rec_card,verbose=False)
+    test_undo_save_sensitivity(rec_card)
     print 'Undo properly sensitizes save widget.'
-    test_ing_group_editing(rec_card,verbose=False)
+    test_ing_group_editing(rec_card)
     print 'Ing Group Editing works.'
 except:
     import traceback; traceback.print_exc()
